--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -60,10 +60,41 @@
 	\newpage
 
 	\section{Introduction}
-
-
+	Citizen sourced journalism is an important medium of expression
+    for people, especially in rural India, who are often kept out of discussions regarding
+    issues faced by them. With increasingly improved technology and the penetration
+    of mobile phones, giving people lot of computation power in their hands, the medium of the contribution of stories by the users is no longer limited to just text-based. People can also
+    now contribute audios, videos, and photos to support their stories. But the underlying
+    fact remains that whatever the degree of participation, and whatever the medium, there
+    is a strong need of screening the contributed items, identifying the topics of discussion and grouping based on the same before they can be published. This is necessary to maintain the quality of the news of being reported, the decisions being carried out and take into account the sensitivities of various parties.
+    \newline
+    
+    
+    Our app is built around the Mobile-Based community platforms like --------------
+    which use the common “missed call” concept where users place a call to a phone number and the server cuts the call and calls them back, thus making the system free of cost for the users. The IVR presents options to record voice messages ------------ they want to share. A wide variety of topics can be featured on this app, including hyperlocal news, job openings, agriculture advisory, social issues such as early marriage and domestic violence, health Q&A, governance and accountability, folk songs and poems, and local and national level advertisements. The bulk of the content on the platform is user-generated with recordings contributed by the IVR itself and subsequently moderated and
+    curated by the content team for publication on the IVR.\newline
+    
+    
+    As the number of stories contributed by people rises, the need for moderation can turn
+    into a bottleneck for scaling such platforms. It is important to ensure that the items
+    worth publishing are accessible by other people soon after they are recorded. Our app
+    aims to solve this problem by easing the task of the content moderation. In this scheme, moderation is done at two levels: first by community representatives with the help of the smart-phone app and second, by a central team of dedicated moderators. Different responsibilities are split across the two levels, as explained later.\newline
+    
+    
+    According to surveys, in most of these current platforms, for more than 70\% of the rejected messages, the main reason for rejection is poor audio quality. Other messages get rejected because the report is not articulate enough, or it is incomplete, and only 1.5\% messages are rejected because the content is objectionable or incorrect. Our app also aims at addressing these problems. The MV content moderators are presented with this app which takes in all the recorded audios and categorizes each audio based on its quality by comparing it with a minimum threshold. This app then tries to enhance the poor-quality audios, and the ones who can’t be processed further are discarded. The app also has an abusive filter which follows advanced editorial policies to ensure that abusive words and statements are removed from content.\newline
+    
+    
+    Currently, all that the community reporter sees is a long list of audios coming from the IVR. We also aim to add certain features to our app by which the stories contributed by the community reporter are better organized and hence aid him to follow-up on the issue much more effectively. Data and information in such an organized form can then also be shown to various concerned authorities, hence making the voices of the people to be heard where they need to be and improve chances
+    of a resulting impact.\newline
+    
+    
+    The app associates tags based on the broad topic/theme the audio belong to and thus organizes the data based on these tags. These tags help grouping similar kind of data and thus, a particular moderator specialized in that topic can go for the second level of screening of the same.
+    
 
 	\section{Objectives}
+	Design, build and validate an app to moderate and curate the voice messages recorded on IVR (Interactive Voice Response) systems incorporated in Mobile-Based Community Platforms.
+
+    The main objectives of the app is to satisfy the need of automatic content moderation in various Community Platforms by adding features to enhance audio quality, convert to text, abusive content filters, associates tags based on the broad topic/theme( and subtopics having to rank) the audio belongs to and thus, to organize audios collected via the app into issues and enable better tracking of the status of each.
 
 
 \section{Approach to the project}
