Final_Sura_Proposal

--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -202,9 +202,9 @@
 
 
 
-	\begin{thebibliography}{1}
+% 	\begin{thebibliography}{1}
 	
 
 
-	\end{thebibliography}
+% 	\end{thebibliography}
 \end{document}
