--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -70,8 +70,7 @@
     \newline
     
     
-    Our app is built around the Mobile-Based community platforms like --------------
-    which use the common “missed call” concept where users place a call to a phone number and the server cuts the call and calls them back, thus making the system free of cost for the users. The IVR presents options to record voice messages ------------ they want to share. A wide variety of topics can be featured on this app, including hyperlocal news, job openings, agriculture advisory, social issues such as early marriage and domestic violence, health Q&A, governance and accountability, folk songs and poems, and local and national level advertisements. The bulk of the content on the platform is user-generated with recordings contributed by the IVR itself and subsequently moderated and
+    Our app is built around the Mobile-Based Community Platforms. Take for example a platform which uses the common “missed call” concept where users place a call to a phone number and the server cuts the call and calls them back, thus making the system free of cost for the users. The IVR presents options to record voice messages in Hindi and English they want to share. A wide variety of topics can be featured on this app, including hyperlocal news, job openings, agriculture advisory, social issues such as early marriage and domestic violence, health Q&A, governance and accountability, folk songs and poems, and local and national level advertisements. The bulk of the content on the platform is user-generated with recordings contributed by the IVR itself and subsequently moderated and
     curated by the content team for publication on the IVR.\newline
     
     
