--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -70,6 +70,13 @@
     is a strong need of screening the contributed items, identifying the topics of discussion and grouping based on the same before they can be published. This is necessary to maintain the quality of the news of being reported, the decisions being carried out and take into account the sensitivities of various parties.
     \newline
     
+    \begin{figure}
+        \centering
+        \includegraphics[width=15cm]{intro.png}
+        \caption{Who knows your Media \textit{(cited from: newslaundry.com)}}
+        \label{fig:media}
+    \end{figure}
+    
     
     Our app is built around the Mobile-Based Community Platforms. Take for example a platform which uses the common “missed call” concept where users place a call to a phone number and the server cuts the call and calls them back, thus making the system free of cost for the users. The IVR presents options to record voice messages in Hindi and English they want to share. A wide variety of topics can be featured on this app, including hyperlocal news, job openings, agriculture advisory, social issues such as early marriage and domestic violence, health Q&A, governance and accountability, folk songs and poems, and local and national level advertisements. The bulk of the content on the platform is user-generated with recordings contributed by the IVR itself and subsequently moderated and
     curated by the content team for publication on the IVR.\newline
