--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -201,18 +201,39 @@ The app aims to satisfy the need of automatic content moderation in various Comm
 	\begin{thebibliography}{1}
 	
     \bibitem{}
-    Design Lessons from Creating a Mobile Based Community Media Platform in Rural India
-    \textit{Aparna
-Moitra *, Vishnupriya Das **, Gram Vaani team **, Archna Kumar *, Aaditeshwar Seth **}
+    
+    {Aparna
+Moitra , Vishnupriya Das, Gram Vaani team, Archna Kumar , Aaditeshwar Seth}\textit{Design Lessons from Creating a Mobile Based Community Media Platform in Rural India}
 
     \bibitem{}
-    Reality Reporting and Moderation Apps for Community Reporters in Rural Areas
-    \textit{Mridu Atray, Aaditeshwar Seth}
+    {Mridu Atray, Aaditeshwar Seth}
+    \textit{Reality Reporting and Moderation Apps for Community Reporters in Rural Areas}
+
+\bibitem{}
+    {Ceren Budak,
+Sharad Goel,
+Justin M. Rao} \textit{ Fair and Balanced?
+Quantifying Media Bias through
+Crowdsourced Content Analysis}
     
     \bibitem{}
-    Elo rating system
-    \textit{\href{https://en.wikipedia.org/wiki/Elo_rating_system}{https://en.wikipedia.org/wiki/Elo_rating_system}}
+    Haewoon Kwak, Changhyun Lee, Hosung Park, and Sue Moon
+    \textit{What is Twitter, a Social Network or a News Media?}
+    
+        \bibitem{}
+    Engin Bozdag
+    \textit{Bias in algorithmic filtering and personalization}
 
+\bibitem{}
+    Natali Ruchansky,
+Sungyong Seo,
+Yan Liu
+    \textit{CSI: A Hybrid Deep Model for Fake News Detection}
 
+\bibitem{}
+Roja Bandari,
+Sitaram Asur,
+Bernardo A. Huberman
+    \textit{The Pulse of News in Social Media: Forecasting Popularity}
 	\end{thebibliography}
 \end{document}
